Constrain sidebar width and prevent overflow

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -29,6 +29,8 @@
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
+    max-width: 220px;
+    overflow-x: hidden;
 
     &:hover {
       opacity: 1;
